Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34581

Broken links to examples in single-directory-output docs

XMLWordPrintable

    • 170da92d02f2e81bafc9efdf76b2c4facf6486d0 (qtbase)

      For some pages listing examples, wrong URLs are being generated.

      http://doc-snapshot.qt-project.org/qt5-stable/examples-widgets-tools.html

      All URLs on above contain 'qtdoc' as the the module, even though the examples live in qtwidgets.

        For Gerrit Dashboard: QTBUG-34581
        # Subject Branch Project Status CR V

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes